03.composition/src/test/resources/de/monticore/gettingstarted/simplejava/valid/ComplicatedCorrectAssignment.java
package de.monticore.gettingstarted.simplejava.valid;

class ComplicatedCorrectAssignment {

  String a = (3/7*4)+"Foo"

}
