03.composition/src/test/resources/de/monticore/gettingstarted/simplejava/invalid/WrongAssignment.java
package de.monticore.gettingstarted.simplejava.invalid;

class WrongAssignment {

  int a = false

}
